--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,45 +7,49 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/button1"
-        android:text="页面1"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/button1"
+            android:text="页面1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button2"
-        android:text="页面2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        <Button
+            android:id="@+id/button2"
+            android:text="页面2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button3"
-        android:textAllCaps="false"
-        android:text="ViewModel测试页面"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        <Button
+            android:id="@+id/button3"
+            android:textAllCaps="false"
+            android:text="ViewModel测试页面"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button4"
-        android:textAllCaps="false"
-        android:text="MediaPlayer视频播放"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
+        <Button
+            android:id="@+id/button4"
+            android:textAllCaps="false"
+            android:text="MediaPlayer视频播放"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/button5"
-        android:textAllCaps="false"
-        android:text="VideoView视频播放"
-        android:layout_width="match_parent"
-        android:layout_height="50dp" />
-</LinearLayout>
+        <Button
+            android:id="@+id/button5"
+            android:textAllCaps="false"
+            android:text="VideoView视频播放"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/button6"
+            android:textAllCaps="false"
+            android:text="ExoPlayer视频播放"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+</androidx.core.widget.NestedScrollView>
