--- a/app/src/main/res/layout/activity_media_player.xml
+++ b/app/src/main/res/layout/activity_media_player.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".mediaplayer.MediaPlayerActivity">
+    tools:context=".media.mediaplayer.MediaPlayerActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
