--- a/app/src/main/res/layout/activity_anim.xml
+++ b/app/src/main/res/layout/activity_anim.xml
@@ -7,6 +7,7 @@
     tools:context=".anim.AnimActivity">
 
     <LinearLayout
+        android:id="@+id/content_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -70,10 +71,27 @@
         android:layout_marginTop="400px"
         android:layout_width="match_parent"
         android:layout_height="1px" />
+
+    <View
+        android:background="@color/colorAccent"
+        android:layout_marginLeft="600px"
+        android:layout_width="1px"
+        android:layout_height="match_parent" />
+    <View
+        android:background="@color/colorAccent"
+        android:layout_marginTop="600px"
+        android:layout_width="match_parent"
+        android:layout_height="1px" />
     <View
         android:background="@color/colorAccent"
         android:layout_gravity="center"
         android:layout_marginTop="400px"
         android:layout_width="match_parent"
         android:layout_height="1px" />
+
+    <ProgressBar
+        android:id="@+id/loading_layout"
+        android:background="@color/cardview_shadow_start_color"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
