--- a/app/src/main/res/layout/activity_adaptation.xml
+++ b/app/src/main/res/layout/activity_adaptation.xml
@@ -11,6 +11,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <View
+            android:background="@color/design_default_color_secondary"
+            android:layout_width="match_parent"
+            android:layout_height="78dp" />
+
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -54,10 +59,11 @@
                 android:layout_width="40.5dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
-                android:background="@android:color/holo_red_light" />
+                android:background="@android:color/holo_orange_light" />
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/text_tips"
             android:text="我是文本"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -66,7 +72,12 @@
             android:layout_gravity="center_horizontal"
             android:background="@color/colorAccent"
             android:layout_width="200dp"
-            android:layout_height="100dp" />
+            android:layout_height="132dp" />
+
+        <View
+            android:background="@android:color/holo_orange_dark"
+            android:layout_width="match_parent"
+            android:layout_height="10dp" />
 
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
