--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#FF0000</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="colorUnCheck">#666666</color>
 </resources>
