--- a/app/src/main/res/layout/activity_flow_test.xml
+++ b/app/src/main/res/layout/activity_flow_test.xml
@@ -7,24 +7,48 @@
     tools:context=".flow.FlowTestActivity">
 
     <TextView
-        android:id="@+id/flow_text"
+        android:id="@+id/flow_receive"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="20dp"
+        android:text=""
+        android:textSize="20sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/flow_text"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flow_receive"
         android:padding="20dp"
         android:text="0"
         android:textSize="20sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+
+
     <Button
         android:id="@+id/flow_btn"
         android:text="开始计时"
         android:textSize="18sp"
+        android:textAllCaps="false"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/flow_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/flow_btn_close"
+        android:text="关闭flow"
+        android:textSize="18sp"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flow_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
