--- a/app/src/main/res/layout/item_list_main.xml
+++ b/app/src/main/res/layout/item_list_main.xml
@@ -2,9 +2,7 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="10dp"
-    android:layout_marginBottom="20dp"
+    android:layout_margin="10dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="8dp"
     android:theme="@style/Theme.MaterialComponents"
