--- a/app/src/main/res/layout/activity_flow_test.xml
+++ b/app/src/main/res/layout/activity_flow_test.xml
@@ -52,4 +52,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:text="测试 SystemUiVisibility 的各种参数"
+        android:textSize="38sp"
+        android:textColor="@color/exo_black_opacity_60"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
