--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <!--    着重强调色，一般如 floatingActionBar 按钮的颜色，RadioButton／输入框聚焦／进度条等色值-->
     <color name="colorAccent">#FFC107</color>
+    <!--    控件的默认颜色-->
+    <color name="colorControlNormal">#33ee03</color>
     <!--   标题栏文字颜色 ，没变化，改了button文字颜色-->
     <color name="textColorPrimary">#ff0000</color>
     <!--    窗口背景色-->
